--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <title>Interfaz HRV</title>
   </head>
   <body>
