--- a/templates/home.html
+++ b/templates/home.html
@@ -3,19 +3,50 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Happy_smiley_face.png/480px-Happy_smiley_face.png" type="image/x-icon">
     <title>Interfaz HRV</title>
   </head>
   <body>
     <section id="principal">
-      <div class="menu-sup">
-        Barra superior
+      <div class="header">
+        <ul>
+          <li>
+            logo
+          </li>
+          <li>
+            <ul>
+              <li>
+                <button href="#" class="btn btn-primar">
+                  abrir
+                </button>
+              </li>
+              <li>
+                <button href="#" class="btn btn-primar">
+                guardar
+                </button>
+            </li>
+              <li>
+                <button href="#" class="btn btn-primar">
+                  exportar
+                </button>
+              </li>
+            </ul>
+          </li>
+          <li>
+            informacion
+          </li>
+        </ul>
       </div>
       <div class="part_central">
-        <div class="grafica">grafica</div>   
-        <div class="info-lat">herramientas</div>
-      </div>
-      <div class="menu-inf">
-        Barra inferior
+        <div class="content">
+          <div class="grafica">
+            <img class="img-fluid" src="https://cdttexmelucan.com/wp-content/uploads/2019/11/importancia-del-electrocardiograma.jpg" alt="">
+          </div>
+          <div class="info">
+            informacion
+          </div>
+        </div>   
+        <div class="panel">herramientas</div>
       </div>
     </section>
   </body>
