--- a/templates/home.html
+++ b/templates/home.html
@@ -17,17 +17,20 @@
             <ul>
               <li>
                 <button href="#" class="btn btn-primar">
-                  abrir
+                  <img src="/static/svg/folder-open.svg" alt="">
+                  <span>Abrir</span>
                 </button>
               </li>
               <li>
                 <button href="#" class="btn btn-primar">
-                guardar
+                  <img src="/static/svg/save.svg" alt="">
+                  <span>Guardar</span>
                 </button>
             </li>
               <li>
                 <button href="#" class="btn btn-primar">
-                  exportar
+                  <img src="/static/svg/download.svg" alt="">
+                  <span>Descargar</span>
                 </button>
               </li>
             </ul>
