--- a/static/style.css
+++ b/static/style.css
@@ -43,7 +43,8 @@
 ul > li{
     display: block;
     float: left;
-    width: 80px;
+    width: 100px;
+    margin-right: 5px;
 }
 ul > li > ul > li{
     height: calc(100px / 3) !important;
@@ -60,6 +61,19 @@ a:hover{
 .btn{
     padding: 5px;
     text-align: left;
-    width: 80px !important;
+    width: 100px !important;
     height: auto;
+    transition: 250ms;
+    background-color: pink;
+    border-radius: 5px;
+}
+.btn > img{
+    height: 15px;
+    float: left;
+}
+.btn > span{
+    margin-left: 5px;
+}
+.btn:hover{
+    background-color: cadetblue;
 }
