--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .section{
@@ -10,7 +11,8 @@
 
 .header{
     height: 100px;
-    border: 1px solid black;
+    background-color: #004c75;
+    color: white;
 }
 
 .part_central{
@@ -22,6 +24,7 @@
     width: 80vw;
     height: calc(100vh - 80px);
     border: 1px solid;
+    background-color: #e3e3e3;
 }
 .panel{
     min-width: 250px !important;
@@ -32,13 +35,13 @@
 }
 .img-fluid{
     width: auto;
-    height: calc(100vh - 280px);
+    height: calc(100vh - 300px);
     margin: 10px;
 }
 .info{
     display: flex;
     flex-direction: row;
-    height: 150px;
+    height: 100px;
 }
 ul > li{
     display: block;
@@ -47,7 +50,8 @@ ul > li{
     margin-right: 5px;
 }
 ul > li > ul > li{
-    height: calc(100px / 3) !important;
+    height: calc(85px / 3) !important;
+    margin-top: 4px;
 }
 a{
     color: black;
@@ -64,7 +68,9 @@ a:hover{
     width: 100px !important;
     height: auto;
     transition: 250ms;
-    background-color: pink;
+    border:  1px solid whitesmoke;
+    background-color: #004c75;
+    color: white;
     border-radius: 5px;
 }
 .btn > img{
