--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="{{ url_for('static',     filename='css/template.css') }}">
     <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Happy_smiley_face.png/480px-Happy_smiley_face.png" type="image/x-icon">
     <title>Interfaz HRV</title>
   </head>
