--- a/templates/home.html
+++ b/templates/home.html
@@ -47,11 +47,11 @@
           <div class="grafica">
             <img class="img-fluid" src="https://cdttexmelucan.com/wp-content/uploads/2019/11/importancia-del-electrocardiograma.jpg" alt="">
           </div>
-          <div class="info">
+          <!-- <div class="info">
             informacion
-          </div>
+          </div> -->
         </div>   
-        <div class="panel">herramientas</div>
+        <!-- <div class="panel">herramientas</div> -->
       </div>
     </section>
   </body>
