--- a/templates/home.html
+++ b/templates/home.html
@@ -20,15 +20,19 @@
             <ul>
               <li>
                 <form action="/upload">
-                  <input type="file" name="fileupload" value="fileupload" id="fileupload">
+                <button href="#" class="btn btn-primar" type="submit">
                   <img src="/static/svg/save.svg" alt="">
-                  <input type="submit" value="Klik">
+                  <span>Abrir</span>
+                </button>
                 </form>
               </li>
               <li>
-                <button href="#" class="btn btn-primar">
+                <form>
+                <button href="#" class="btn btn-primar" type="submit">
+                  <img src="/static/svg/save.svg" alt="">
                   <span>Guardar</span>
                 </button>
+                </form>
             </li>
               <li>
                 <button href="#" class="btn btn-primar">
